--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Expense Tracker</title>
+    <title>Expense Manager</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header>
-      <h1>Expense Tracker</h1>
+      <h1>Expense Manager</h1>
       <h3>Total Balance: <span id="total-balance">0</span></h3>
     </header>
 
